Fix Travis CI configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,10 @@ before_install:
 - sudo apt-get install -qq debootstrap
 
 script:
-- bash scripts/mkrootfs.sh
-- docker build -f Dockerfile.deploy -t spinlocklabs/chromium-builder-rootfs:latest .
+- sudo bash scripts/mkrootfs.sh
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
+      docker build -f Dockerfile.deploy -t spinlocklabs/chromium-builder-rootfs:latest .
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
       docker push spinlocklabs/chromium-builder-rootfs
     fi
-
