Travis CI: Cleanup

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 script:
 - sudo bash scripts/mkrootfs.sh
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+  - if [ "$TRAVIS_BRANCH" == "master" ] && [ ! -z "$DOCKER_PASSWORD" ]; then
       docker build -f Dockerfile.deploy -t spinlocklabs/chromium-builder-rootfs:latest .;
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
       docker push spinlocklabs/chromium-builder-rootfs;
